make action class automatically generate async result actions

--- a/locales/ja_JP.json
+++ b/locales/ja_JP.json
@@ -1,7 +1,6 @@
 {
+    // UNUSED
     "About": "このページについて",
     // UNUSED
-    "fish": "魚",
-    // NEW
-    "one fish": {"one":"","other":""}
+    "fish": "魚"
 }
