Start writing target directories for localizations

--- a/locales/ja.json
+++ b/locales/ja.json
@@ -1,6 +1,6 @@
 {
     // src/Application/pages/AboutPage/index.js:13
-    "About": "TRANSLATED",
+    "About": "TEST",
     // UNUSED
     "OTHER": "TEST"
 }
