--- a/locales/ja.json
+++ b/locales/ja.json
@@ -3,7 +3,7 @@
     // src/Application/pages/AboutPage/index.js:14
     "About": "",
     // UNUSED
-    "OTHER": "TEST",
+    "Search Page": "サーチページ",
     // src/Application/pages/AboutPage/index.js:38
-    "Welcome to the about page!": "ようこそ"
+    "Welcome to the about page!": "このページについて"
 }
